repos/emily-python/contents/test/reader/fail/dotStray.em
# Dot must be followed by something
# Arg: --ast
# Expect failure

# . at end of program (or before comma) is fallaciously allowed
# Tags: broken-all

x.